fix y overflow on card

--- a/calendar_app/static/main.css
+++ b/calendar_app/static/main.css
@@ -129,6 +129,7 @@ td {
 
 #event-card{
     width: 400px;
+    overflow-y: scroll;
 }
 
 #create {
